k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mini-social
  labels:
    app.kubernetes.io/part-of: mini-reseau-social
